--- a/src/pages/login/login.module.css
+++ b/src/pages/login/login.module.css
@@ -9,7 +9,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 25%;
+    width: 400px;
     margin: 30px auto 0px auto;
     box-shadow: 0 4px 8px 0 darkgray;
     border-radius: 5px;
@@ -20,7 +20,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 80%;
+    width: 300px;
 }
 
 .login_header {
@@ -43,4 +43,13 @@
 
 .hidden {
     display: none !important;
+}
+
+.login_error {
+    width: 300px;
+    border-radius: 5px;
+    background: lightpink;
+    margin: 10px;
+    padding: 10px;
+    border-color: indianred;
 }
