--- a/src/pages/login/login.module.css
+++ b/src/pages/login/login.module.css
@@ -21,6 +21,7 @@
     align-items: center;
     justify-content: center;
     width: 300px;
+    margin: 0 auto;
 }
 
 .login_header {
@@ -49,8 +50,8 @@
     width: 300px;
     border-radius: 5px;
     background: lightpink;
-    margin: 10px;
-    padding: 10px;
+    margin: 10px auto;
+    padding: 1px;
     border-color: indianred;
 }
 
