--- a/src/pages/signup/signup.module.css
+++ b/src/pages/signup/signup.module.css
@@ -25,6 +25,7 @@
 
 .login_header {
     text-align: center;
+    padding: 10px 0px 10px 0;
 }
 
 .login_button {
@@ -45,21 +46,7 @@
     display: none !important;
 }
 
-.login_error {
-    width: 300px;
-    border-radius: 5px;
-    background: lightpink;
-    margin: 10px;
-    padding: 10px;
-    border-color: indianred;
-}
-
 .error_close {
     width: 50px;
     height: 50px;
-}
-
-.login_error_message {
-    display: flex;
-    align-items: center;
 }
