--- a/src/pages/passwordReset/passwordReset.module.css
+++ b/src/pages/passwordReset/passwordReset.module.css
@@ -33,14 +33,15 @@
     margin-top: 10px !important;
 }
 
-.loader {
-    position: absolute;
-    top: 50%;
-    left: 50%;
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .display_block {
-    display: block !important;
+    display: flex !important;
 }
 
 .hidden {
@@ -50,4 +51,13 @@
 .error_close {
     width: 50px;
     height: 50px;
+}
+
+.success_check {
+    width: 100px !important;
+    height: 100px !important;
+}
+
+.success_color {
+    color: #4caf50;
 }
